[package]
name = "cnls"
description = "Class Name Language Server for web frontend projects."
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Gnarus-G/cnat"
repository = "https://github.com/Gnarus-G/cnat"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
colored = "2.1.0"
swc_common = { version = "0.33.19", features = ["tty-emitter"] }
swc_css = "0.157.38"
swc_ecma_ast = "0.112.5"
swc_ecma_parser = { version = "0.143.9", features = ["swc_ecma_visit"] }
swc_ecma_visit = "0.98.6"
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
] }
tower-lsp = "0.20.0"
ignore = "0.4"
dashmap = "5.5.3"
